# lv-server

./: Cargo.toml  README.md  htmx.md
example/: Cargo.toml
example/src/: db.old.rs  db.rs  db_new.rs  dev.rs  extractors.rs  exts.rs  main.rs  page.rs  prelude.rs  result.rs  types.rs
example/src/fragments/: add_book_button.rs  book_list.rs  header.rs  library_create_form.rs  mod.rs
example/src/models/: author.rs  book.rs  library.rs  liked_book.rs  mod.rs  recommended_book.rs
example/src/models/author/: crud.rs  libraries.rs  mod.rs
example/src/models/author/partials/: mod.rs  params.rs
example/src/models/book/: crud.rs  mod.rs
example/src/models/book/partials/: mod.rs  params.rs
example/src/models/book_content/: crud.rs  mod.rs
example/src/models/library_recommendation/: crud.rs  domain.rs  mod.rs
example/src/models/library_recommendations/: crud.rs  domain.rs  mod.rs
example/src/models/library_recommendations/partials/: mod.rs  params.rs
example/src/models/liked_book/: crud.rs  mod.rs
example/src/models/liked_book/partials/: mod.rs  params.rs
example/src/views/: library.rs  mod.rs
example/src/views/_home/: mod.rs
example/src/views/_home/fragments/: author_list.rs  mod.rs  recent_article_list.rs
example/src/views/_library/: mod.rs
example/src/views/_library/fragments/: add_book_button.rs  book_list.rs  book_view_edit_toggle.rs  mod.rs
example/src/views/_profile/: mod.rs
example/src/views/_profile/fragments/: add_library_button.rs  author_library_list.rs  mod.rs
example/src/views/_profile_library/: mod.rs
example/src/views/_profile_library/fragments/: add_book_button.rs  book_list.rs  book_view_edit_toggle.rs  (+4 more)
lv-server/: Cargo.toml
lv-server/examples/static/: main.js  style.css
lv-server/examples/todo-list/: app_data.rs  main.rs  page.rs  prelude.rs
lv-server/examples/todo-list/views/: mod.rs
lv-server/src/: csrf.rs  ext_maud.rs  fragment.rs  lib.rs  path_extractor.rs  responses.rs  view.rs  with_render.rs  with_router.rs  with_scope.rs  with_trigger.rs
(+18 files in other folders)
