[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
maud = "0.25.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
actix-web = "4.4.0"
nanoid = "0.4.0"

serde_json = "1.0.108"
actix-files = "0.6.2"
tokio = { version = "1.35.0", features = ["full"] }

lv-server = { path = "../lv-server" }