[package]
name = "example"
version = "0.1.0"
edition = "2021"

[dependencies]
maud = { version = "0.25.0", features = ["actix-web"] }
serde = { version = "1.0.193", features = ["serde_derive"] }
actix-web = "4.4.0"
nanoid = "0.4.0"
chrono = { version = "0.4.31", features = ["serde", "clock"] }

serde_json = "1.0.108"
actix-files = "0.6.2"
tokio = { version = "1.35.0", features = ["full"] }

# markdown
pulldown-cmark = "0.9.2"
ammonia = "3"

lv-server = { path = "../lv-server" }