[package]
name = "lv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.25.0"
serde = { version = "1.0.193", features = ["serde_derive"] }
actix-web = "4.4.0"
async-trait = "0.1.74"

# used in prints
# owo-colors = "4.0.0"

lv-server-endpoints-proc-macro = { path = "../endpoints-proc-macro" }
